dynamic interface create

--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "description": "Cross-chain atomic swap using hash-locked escrows",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "swap": "npm run build && node dist/src/dynamic-swap.js"
   },
   "dependencies": {
     "ethers": "^5.7.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "axios": "^1.6.0",
+    "inquirer": "^9.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "typescript": "^5.0.4"
+    "@types/node": "^20.0.0",
+    "@types/inquirer": "^9.0.0",
+    "typescript": "^5.0.0"
   },
-  "keywords": ["blockchain", "cross-chain", "escrow", "atomic-swap"],
+  "keywords": [
+    "ethereum",
+    "cross-chain",
+    "atomic-swap",
+    "escrow",
+    "defi"
+  ],
   "author": "",
   "license": "MIT"
 } 
