--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "ethers": "^5.7.2",
     "dotenv": "^16.0.3",
-    "axios": "^1.6.0",
-    "inquirer": "^9.2.0"
+    "axios": "^1.4.0",
+    "inquirer": "^8.2.5",
+    "stellar-sdk": "^11.0.0",
+    "soroban-client": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
