--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.11",
     "postprocessing": "latest",
     "react": "^19",
     "react-day-picker": "9.8.0",
