--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/fiber": "latest",
     "@react-three/postprocessing": "latest",
+    "@stellar/freighter-api": "^4.1.0",
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@wagmi/core": "^2.18.0",
