--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "StellarFusion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -62,6 +62,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.11",
+    "pino-pretty": "^13.1.1",
     "postprocessing": "latest",
     "react": "^19",
     "react-day-picker": "9.8.0",
