--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "@react-three/fiber": "latest",
     "@react-three/postprocessing": "latest",
     "@stellar/freighter-api": "^4.1.0",
+    "@stellar/stellar-base": "^13.1.0",
+    "@stellar/stellar-sdk": "^13.3.0",
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@wagmi/core": "^2.18.0",
@@ -72,6 +74,8 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "soroban-client": "^1.0.1",
+    "stellar-sdk": "^13.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
