--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@wagmi/core": "^2.18.0",
     "autoprefixer": "^10.4.20",
+    "bindings": "file:../stellar-contracts/escrow-factory/contracts/hello-world/bindings",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
